syntax = "proto3";

option java_package = "ai.xeb.gload";

package time;

service Timer {
  rpc GetTime (TimeRequest) returns (TimeReply) {}
}

message TimeRequest {
  
}

message TimeReply {
  int64 TimeValue = 1;
}